--- a/content/contact.html
+++ b/content/contact.html
@@ -5,6 +5,12 @@ menu: "main"
 weight: 20
 ---
 
+<style>
+  a {
+    border: 0px !important;
+  }
+</style>
+
 <h2>Email</h2>
 <p class="mb-4">
   <a href="mailto:thibaultlebrun@live.fr" target="_blank">thibaultlebrun@live.fr</a>
